# skysealand-detector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_environment.yml  devinstall.py  pyproject.toml
.github/workflows/: ci.yml
src/skysealand/: api.py  cli.py  inference.py  logging_setup.py
src/skysealand/dataset/: download.py  load.py  validation.py
src/skysealand/train/: yolo_baseline.py
static/: index.html  script.js  style.css
test/dataset/: conftest.py  test_detection_processing.py  test_image_loading.py  test_inference.py  test_validation.py
test/dataset/dummy-data/: dummy-data.yaml
test/dataset/dummy-data-with-errors/test/labels/: sample_01049.txt
test/dataset/dummy-data-with-errors/train/labels/: sample_00001.txt
test/dataset/dummy-data/test/labels/: sample_01049.txt
test/dataset/dummy-data/train/labels/: sample_00001.txt
test/dataset/dummy-data/val/labels/: sample_01176.txt
